k8s/frontend.yaml
# k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keebie-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keebie-frontend
  template:
    metadata:
      labels:
        app: keebie-frontend
    spec:
      containers:
      - name: frontend
        image: tedomi2705/keebie-frontend:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: keebie-frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: keebie-frontend
